Fix: `TransactionStatus` counter style alignment

--- a/src/modules/users/components/GasStation/TransactionCard/TransactionStatus.css
+++ b/src/modules/users/components/GasStation/TransactionCard/TransactionStatus.css
@@ -5,7 +5,6 @@
 
 .counter {
   display: inline-block;
-  padding-top: 3px;
   height: 20px;
   width: 20px;
   border-radius: 50%;
